--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
 		<main> Fast bredd </main>
 		<nav> Länkar till andra sidor </nav>
 	</div> -->
+
+	<div class="exercise-3b">
+		<header> header </header>
+		<main> middle part </main>
+		<footer> footer </footer>
+	</div>
 </body>
 </html>
