Övning 6 in progress

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Flexbox övningar </title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="order-summary.css">
 </head>
 <body>
 	<h1> Flexbox övningar, kap 4 </h1>
@@ -25,5 +26,23 @@
 		<main> middle part </main>
 		<footer> footer </footer>
 	</div>
+	
+	<section class="order-summary">
+		<div class="header-container">
+			<img class="header-image" src="header-image.svg" />
+		</div>
+		<h2> Order Summary </h2>
+		<p> You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
+		<div class="note-and-price">
+			<img class="" src="icon-note.svg" />
+			<div>
+				<h3> Annual Plan </h3>
+				<p> $79.99/year </p>
+			</div>
+			<a href="#"> Change </a>
+		</div>
+		<button> Proceed to payment </button>
+		<a href="#"> Cancel order </a>
+	</section>
 </body>
 </html>
