--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
 			<img class="header-image" src="header-image.svg" />
 		</div>
 		<h2> Order Summary </h2>
-		<p> You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
+		<p class="description"> You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
 		<div class="note-and-price">
-			<img class="" src="icon-note.svg" />
-			<div>
+			<div class="note-container">
+				<img class="" src="icon-note.svg" />
+			</div>
+			<div class="plan">
 				<h3> Annual Plan </h3>
 				<p> $79.99/year </p>
 			</div>
